--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -4,12 +4,15 @@ on:
     schedule:
         - cron: "0 0 * * *"
     workflow_dispatch:
+
 jobs:
     update-readme:
         name: Update Readme with Metrics
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
             - uses: anmol098/waka-readme-stats@master
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SHOW_OS: "true"
