--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,5 +14,5 @@ jobs:
             - uses: anmol098/waka-readme-stats@master
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
                   SHOW_OS: "true"
