--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -15,4 +15,20 @@ jobs:
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                   GH_TOKEN: ${{ secrets.GH_TOKEN }}
-                  SHOW_OS: "true"
+                  SHOW_PROJECTS: True
+                  SHOW_EDITORS: False
+                  SHOW_TIMEZONE: False
+                  SHOW_COMMIT: False
+                  SHOW_LANGUAGE: False
+                  SHOW_LINES_OF_CODE: False
+                  SHOW_LANGUAGE_PER_REPO: False
+                  SHOW_LOC_CHART: False
+                  SHOW_DAYS_OF_WEEK: False
+                  SHOW_PROFILE_VIEWS: False
+                  SHOW_SHORT_INFO: False
+                  SHOW_UPDATED_DATE: False
+                  SHOW_TOTAL_CODE_TIME: False
+                  COMMIT_BY_ME: False
+                  COMMIT_MESSAGE: Updated with Dev Metrics
+                  COMMIT_SINGLE: False
+              
