--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -16,6 +16,7 @@ jobs:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                   GH_TOKEN: ${{ secrets.GH_TOKEN }}
                   SHOW_PROJECTS: True
+                  SHOW_OS: False
                   SHOW_EDITORS: False
                   SHOW_TIMEZONE: False
                   SHOW_COMMIT: False
