--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,7 +28,7 @@ jobs:
                   SHOW_PROFILE_VIEWS: False
                   SHOW_SHORT_INFO: False
                   SHOW_UPDATED_DATE: False
-                  SHOW_TOTAL_CODE_TIME: False
+                  SHOW_TOTAL_CODE_TIME: True
                   COMMIT_BY_ME: False
                   COMMIT_MESSAGE: Updated with Dev Metrics
                   COMMIT_SINGLE: False
