--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,6 +1,9 @@
 name: Update README
 
 on:
+    push:
+        branches:
+            - main
     schedule:
         - cron: "0 0 * * *"
     workflow_dispatch:
