--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,7 +22,7 @@ jobs:
                   SHOW_OS: False
                   SHOW_EDITORS: False
                   SHOW_TIMEZONE: False
-                  SHOW_COMMIT: True
+                  SHOW_COMMIT: False
                   SHOW_LANGUAGE: False
                   SHOW_LINES_OF_CODE: False
                   SHOW_LANGUAGE_PER_REPO: False
